[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/waveGenerator.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/waveMeter.tscn" type="PackedScene" id=2]
[ext_resource path="res://at01.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="waveGenerator" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="checkTimer" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="waveMeter" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
margin_left = 488.0
margin_top = 15.0
margin_right = 509.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "0"

[connection signal="timeout" from="checkTimer" to="." method="_on_checkTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
